# crust-template

./: .dockerignore  .env  .gitignore  Cargo.toml  README.md  commands.md  docker-compose.yml
api/: Cargo.toml
api/src/: error.rs  main.rs  paged.rs  single.rs  util.rs  v1.rs
api/src/js/: authors.couchjs  books.couchjs
docker/: api.dockerfile  dev.dockerfile  tauri.dockerfile
frontend/: package.json
frontend/src/: App.svelte  main.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
models/: Cargo.toml
models/src/: db_utils.rs  lib.rs
