[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
couch_rs = { version = "0.8.33" }
models = { path = "../models", features = ["couch"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.1", features = ["rapidoc", "swagger"] }
schemars = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
