[package]
name = "models"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "run_migrations"
required-features = ["couch", "tokio"]

[[bin]]
name = "populate_db"
required-features = ["couch", "rand", "tokio"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
couch_rs = { version = "0.8.33", optional = true }
couch_rs_derive = { version = "0.8.33", optional = true }
rand = { version = "0.8.4", optional = true }
schemars = { version = "*", features = ["chrono"] }
serde = "1.0.130"
serde_json = "1.0.71"
tokio = { version = "*", features = [], optional = true }

[features]
couch = ["couch_rs", "couch_rs_derive"]
